some overflow fixes

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -674,7 +674,7 @@ a, img {
 
 .nav {
   float: left;
-  max-width: 780px; }
+  max-width: 770px; }
   .nav .top-menu {
     margin: 0;
     margin-left: -15px;
@@ -704,7 +704,7 @@ a, img {
           content: '';
           display: block;
           position: absolute;
-          background-color: #15141b;
+          background-color: transparent;
           top: -3px;
           left: 0;
           width: 100%;
@@ -1452,6 +1452,7 @@ a, img {
   position: absolute;
   z-index: 1; }
   .quote-bg-wrapper img {
+    height: 100%;
     width: 100%; }
 
 .service {
