--- a/app/scss/components/quote.scss
+++ b/app/scss/components/quote.scss
@@ -59,6 +59,7 @@
     z-index: 1;
 
     img {
+        height: 100%;
         width: 100%;
     }
 }
